; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_20901.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_20901.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i64, i64, i64, i64, i32*, i32*, i32, i32, i32 }

@ULONG_MAX = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca %struct.TYPE_7__, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, 4
  br i1 %8, label %9, label %14

9:                                                ; preds = %2
  %10 = load i8**, i8*** %5, align 8
  %11 = getelementptr inbounds i8*, i8** %10, i64 0
  %12 = load i8*, i8** %11, align 8
  %13 = call i32 @usage(i8* %12)
  store i32 -1, i32* %3, align 4
  br label %88

14:                                               ; preds = %2
  %15 = load i8**, i8*** %5, align 8
  %16 = getelementptr inbounds i8*, i8** %15, i64 1
  %17 = load i8*, i8** %16, align 8
  %18 = call i8* @strtoul(i8* %17, i32* null, i32 0)
  %19 = ptrtoint i8* %18 to i64
  %20 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 0
  store i64 %19, i64* %20, align 8
  %21 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load i64, i64* @ULONG_MAX, align 8
  %24 = icmp eq i64 %22, %23
  br i1 %24, label %25, label %26

25:                                               ; preds = %14
  store i32 -1, i32* %3, align 4
  br label %88

26:                                               ; preds = %14
  %27 = load i8**, i8*** %5, align 8
  %28 = getelementptr inbounds i8*, i8** %27, i64 2
  %29 = load i8*, i8** %28, align 8
  %30 = call i8* @strtoul(i8* %29, i32* null, i32 0)
  %31 = ptrtoint i8* %30 to i64
  %32 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 1
  store i64 %31, i64* %32, align 8
  %33 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 1
  %34 = load i64, i64* %33, align 8
  %35 = load i64, i64* @ULONG_MAX, align 8
  %36 = icmp eq i64 %34, %35
  br i1 %36, label %37, label %38

37:                                               ; preds = %26
  store i32 -1, i32* %3, align 4
  br label %88

38:                                               ; preds = %26
  %39 = load i8**, i8*** %5, align 8
  %40 = getelementptr inbounds i8*, i8** %39, i64 3
  %41 = load i8*, i8** %40, align 8
  %42 = call i8* @strtoul(i8* %41, i32* null, i32 0)
  %43 = ptrtoint i8* %42 to i64
  %44 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 2
  store i64 %43, i64* %44, align 8
  %45 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 2
  %46 = load i64, i64* %45, align 8
  %47 = load i64, i64* @ULONG_MAX, align 8
  %48 = icmp eq i64 %46, %47
  br i1 %48, label %49, label %50

49:                                               ; preds = %38
  store i32 -1, i32* %3, align 4
  br label %88

50:                                               ; preds = %38
  %51 = call i32 (...) @getuid()
  %52 = call i64 @vudo_setenv(i32 %51)
  %53 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 3
  store i64 %52, i64* %53, align 8
  %54 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 3
  %55 = load i64, i64* %54, align 8
  %56 = icmp eq i64 %55, 0
  br i1 %56, label %57, label %58

57:                                               ; preds = %50
  store i32 -1, i32* %3, align 4
  br label %88

58:                                               ; preds = %50
  %59 = call i32 @vudo_msg(%struct.TYPE_7__* %6)
  %60 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 8
  store i32 %59, i32* %60, align 8
  %61 = call i32 @vudo_buf(%struct.TYPE_7__* %6)
  %62 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 7
  store i32 %61, i32* %62, align 4
  %63 = call i32 @vudo_NewArgv(%struct.TYPE_7__* %6)
  %64 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 6
  store i32 %63, i32* %64, align 8
  %65 = call i32* @vudo_execve_argv(%struct.TYPE_7__* %6)
  %66 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 5
  store i32* %65, i32** %66, align 8
  %67 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 5
  %68 = load i32*, i32** %67, align 8
  %69 = icmp eq i32* %68, null
  br i1 %69, label %70, label %71

70:                                               ; preds = %58
  store i32 -1, i32* %3, align 4
  br label %88

71:                                               ; preds = %58
  %72 = call i32* @vudo_execve_envp(%struct.TYPE_7__* %6)
  %73 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 4
  store i32* %72, i32** %73, align 8
  %74 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 4
  %75 = load i32*, i32** %74, align 8
  %76 = icmp eq i32* %75, null
  br i1 %76, label %77, label %78

77:                                               ; preds = %71
  store i32 -1, i32* %3, align 4
  br label %88

78:                                               ; preds = %71
  %79 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 5
  %80 = load i32*, i32** %79, align 8
  %81 = getelementptr inbounds i32, i32* %80, i64 0
  %82 = load i32, i32* %81, align 4
  %83 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 5
  %84 = load i32*, i32** %83, align 8
  %85 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 4
  %86 = load i32*, i32** %85, align 8
  %87 = call i32 @execve(i32 %82, i32* %84, i32* %86)
  store i32 -1, i32* %3, align 4
  br label %88

88:                                               ; preds = %78, %77, %70, %57, %49, %37, %25, %9
  %89 = load i32, i32* %3, align 4
  ret i32 %89
}

declare dso_local i32 @usage(i8*) #1

declare dso_local i8* @strtoul(i8*, i32*, i32) #1

declare dso_local i64 @vudo_setenv(i32) #1

declare dso_local i32 @getuid(...) #1

declare dso_local i32 @vudo_msg(%struct.TYPE_7__*) #1

declare dso_local i32 @vudo_buf(%struct.TYPE_7__*) #1

declare dso_local i32 @vudo_NewArgv(%struct.TYPE_7__*) #1

declare dso_local i32* @vudo_execve_argv(%struct.TYPE_7__*) #1

declare dso_local i32* @vudo_execve_envp(%struct.TYPE_7__*) #1

declare dso_local i32 @execve(i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
